# Wasm-template

./: Cargo.toml  README.md
src/: lib.rs
www/: index.js  package-lock.json  package.json
