[package]
name = "wasm-template"
version = "0.1.0"
authors = ["jafaghpo <jafaghpo@student.42.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
